Colocando signos de puntuacion

--- a/contaco.html
+++ b/contaco.html
@@ -1,5 +1,5 @@
-Caracas -Venezuela
+Caracas, Venezuela.
 
-Parque central, edif tajamar oficina 115
+Parque central, edificio tajamar oficina 115.
 
-0212 4170000
+0212 4170000.
