modificando archivo acerca de

--- a/acercade.html
+++ b/acercade.html
@@ -1,3 +1,11 @@
 
+PLATTNUX <br>
 
-Hola somos una empresa chevere
+
+Hola somos una empresa chevere <br>
+
+que se encarga de dictar cursos en materia tecnologica
+
+
+
+
